# Jarvis

./: .Makefile.swp  .coafile  .coverage  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pypirc  .travis.yml  CONTRIBUTING.md  CmdInterpreter.py  Dockerfile  JarvisMnistClassifier - runable code.py  JarvisMnistClassifier.py  LICENSE  MANIFEST.in  Makefile  MyMnistModel.pth  NEW_FUNCTIONALITIES.md  NLP.py  PLUGINS.md  README.md  Setup  TEST.md  Workflow.md  agenda.csv  audioHandler.py  buildozer.spec  codecov-python.git  contributors.md  credentials.json  docker.sh  evaluator.py  hello world.py  index.html  installpyaudio.py  jarv.py  jarvis  killprocess.py  main.py  (+23 more)
.travis/: install.sh
Graphical_User_Interface/: inputBoxClass.py  ptext.py  test.py  windowClass.py
Jarvis/: .gitignore  CmdInterpreter.py  Jarvis.py  __main__.py  evaluator.py  fileHandler.py  mapps.py  music.py  newws.py  reminder.py  test.py  todo.py
Jarvis Alexa Skill/: Jarvis Alexa Skill.py  README.md  templates.yaml
PyPackages/: curses-2.2+utf8-cp27-cp27m-win_amd64.whl
custom/: __init__.py  file_manager.py  hello_world.py  speech.py  tennis.py
data/: currencies.csv
doc/: API.md  PLUGINS-LIST.md  PLUGINS.md  PLUGINS_MARKETPLACE.md  TESTING.md  TEST_API.md  build.sh
docker/: Dockerfile  jarvis
env/: pip-selfcheck.json
examples/: model.nlp
installer/: __main__.py  helper.py  installer.py  optional.py  requirements.txt  res_requirements.txt  unix_windows.py
jarv/: pip-selfcheck.json
jarviscli/: .coverage  .gitignore  CmdInterpreter.py  Jarvis.py  PluginManager.py  __init__.py  (+12 more)
(+872 files in other folders)
