[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = "Personal Assistant for Linux and macOS"
authors = ["sukeesh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"akinator.py" = "^4.1.0"
archey4 = "4.6.0.post1"
beautifulsoup4 = "^4.9.3"
colorama = "^0.4.4"
distro = "^1.5.0"
flake8 = "^3.8.4"
forex-python = "^1.5"
geopy = "^2.1.0"
GitPython = "^3.1.14"
googletrans = "^3.0.0"
IMDbPY = "^2020.9.25"
mock = "^4.0.3"
nltk = "^3.5"
pathlib = "^1.0.1"
pdfkit = "^0.6.1"
pick = "^1.0.0"
pluginmanager = "^0.4.1"
psutil = "^5.8.0"
pycricbuzz = "^2.4"
pydub = "^0.24.1"
pyjokes = "^0.6.0"
pync = "1.6.1"
pypiwin32 = "^223"
pyreadline = "^2.1"
python-dateutil = "^2.8.1"
pytimeparse = "^1.1.8"
pyttsx3 = "2.71"
pywin32 = "^300"
Random-Word = "^1.0.7"
requests = {extras = ["security"], version = "^2.25.1"}
speedtest-cli = "^2.1.2"
sympy = "^1.7.1"
tabulate = "^0.8.9"
termdown = "^1.17.0"
opencv-python = "^4.5.1"
whois = "^0.9.7"
wikipedia = "^1.4.0"
win10toast = "^0.9"
gTTS = "^2.2.2"
playsound = "^1.2.2"
windows-curses = "^2.2.0"
image = "^1.5.33"
img2pdf = "^0.4.0"
pdf2image = "^1.14.0"
python-nmap = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
